<resources>
    <string name="app_name">EsercitazioneBonus</string>
    <string name="accedi">Accedi</string>
    <string name="password">Password</string>
    <string name="registrati">&lt;a href=http://example.com&gt;Nessun account? Registrati ora!&lt;/a&gt;</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="profilo">Profilo</string>
    <string name="indietro">Indietro</string>
    <string name="benvenuto_username">Benvenuto username</string>
    <string name="ci_sono_degli_errori">Ci sono degli errori nel form!</string>
    <string name="welcome_fmt">Benvenuto %s</string>
    <string name="access_denied">Accesso negato</string>
    <string name="key_username">username</string>
    <string name="key_password">password</string>
    <string name="insert_username">Inserisci l\'username</string>
    <string name="insert_password">Inserisci la password</string>
    <string name="your_username">your username</string>
    <string name="your_password">your password</string>
</resources>
